[package]
name = "mem-rearrange"
description = "Rearrange memory from one array to another of different storage layouts"
version = "0.1.0"
edition = "2024"
authors = ["YdrMaster <ydrml@hotmail.com>"]
repository = "https://github.com/InfiniTensor/mem-rearrange"
documentation = "https://docs.rs/mem-rearrange"
license = "MIT"
readme = "README.md"
keywords = ["rearrange", "ndarray"]
categories = ["algorithms"]

[dependencies]
ndarray-layout = "0.2"
itertools = "0.14"
rayon = "1.10"
